# podscribe

./: .gitignore  README.md  dev-notes  pyproject.toml
src/podscribe/: __init__.py  cli.py  download.py  feed.py  format.py  models.py  summarize.py  transcribe.py
tests/: test_cli.py  test_feed.py  test_format.py  test_summarize.py
tests/fixtures/: feed.xml  transcript.json
