[project]
name = "podscribe"
version = "0.1.0"
description = "Composable CLI toolset for downloading and transcribing podcast audio"
readme = "README.md"
authors = [
    { name = "Luke Bassett", email = "bassett.luke@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "mlx-whisper>=0.4.3",
]

[project.scripts]
podscribe = "podscribe.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
